fix border break on tablet view

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -319,10 +319,13 @@ a.social-icon:hover {
   display: block;
 }
 
+.pc-text {
+  display: none;
+}
+
 
 @media (min-width: 750px) {
   /*header*/
-
   h1 {
     font-size: 70px;
     display: inline;
@@ -462,4 +465,16 @@ a.social-icon:hover {
     font-family: Raleway-Bold;
     letter-spacing: 0.2rem;
     font-weight:normal;
+}
+
+@media(min-width: 1200px){
+  .pc-text{
+    display: inline;
+  }
+}
+
+@media(max-width: 850px){
+  .pc-text{
+    display: inline;
+  }
 }
