--- a/assets/css/skeleton.css
+++ b/assets/css/skeleton.css
@@ -48,8 +48,8 @@
     padding: 0; }
 }
 
-/* For devices larger than 550px */
-@media (min-width: 750px) {
+/* For devices larger than 750px */
+@media (min-width: 900px) {
   .container {
     width: 80%; }
   .column,
